Add functionality to change grid size.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <script src="scripts.js" defer></script>
   </head>
   <body>
-    <div id="container"></div>
+    <div class="flex">
+      <div>
+        <button id="grid-button">Change Grid</button>
+      </div>
+      <div id="container" class="grid-container"></div>
+    </div>
   </body>
 </html>
