Tidy code and add comments.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div class="flex">
       <div>
         <button id="grid-button">Change Grid</button>
+        <button id="rainbow">Activate Rainbow</button>
+        <button id="clear">Clear</button>
       </div>
       <div id="container" class="grid-container"></div>
     </div>
